# cookie_classic

./: README.md  cookiecutter.json
.github/workflows/: ci.yml
{{ cookiecutter.project_name }}/: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  pyproject.toml
{{ cookiecutter.project_name }}/.github/: PULL_REQUEST_TEMPLATE.md
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: question.md
{{ cookiecutter.project_name }}/.github/workflows/: main.yaml
{{ cookiecutter.project_name }}/app/: __main__.py
{{ cookiecutter.project_name }}/docs/: doc.md
{{ cookiecutter.project_name }}/docs/examples/: example.py
