# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.description }}"
version = "{{ cookiecutter.version }}"
authors = ["{{ cookiecutter.github_username }} <{{ cookiecutter.email }}>"]
readme = "README.md"
license = "Apache Software License 2.0"

repository = "{{ cookiecutter.hub }}"
homepage = "{{ cookiecutter.hub }}"
documentation = "{{ cookiecutter.docs }}"
keywords = []

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = []

[tool.poetry.dependencies]
python = "^{{ cookiecutter.py_ver }}"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
vulture = "^1.5"
flake8 = "^3.8.3"
mypy = "^0.782"
pylama = "^7.7.1"
bandit = "^1.6.2"
pydocstyle = "^5.0.2"
autopep8 = "^1.5.3"
pytest = "^6.0.1"

[tool.isort]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
length_sort = true
default_section = "FIRSTPARTY"
multi_line_output = 5
force_grid_wrap = 0
use_parentheses = true
line_length = 90

[tool.poetry.scripts]
cli = "app.__main__:main"
